MOD[svelte]: project structure refactor and component Implementation